More code cleanup & warning removal